--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -40,8 +40,9 @@
                     var spec = list[i].goodsSpecification;
                     var wareId = list[i].warehouseId;
                     var number = list[i].goodsNumber;
-                    let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td>
-<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td></tr>`;
+                    let insert = `<tr ><td id="${'goodsId' + id + wareId}">${id}</td><td id="${'name' + id + wareId}">${name}</td>
+<td id="${'number' + id + wareId}">${number}</td><td id="${'spec' + id + wareId}">${spec}</td><td id="${'wareId' + id + wareId}">${wareId}</td>
+<td><button type="button" class="btn btn-primary btn-sm" onclick="trans(${id}, ${wareId})">调拨</button></td></tr>`;
                     $("#goods").append(insert);
                 }
             },
@@ -49,6 +50,62 @@
                 alert("获取失败！");
             }
         })
+    </script>
+    <script>
+        function trans(id, wareId) {
+            $("#transArea").html('');
+            let insertHTML = `<div class="panel panel-default" id="addCustomer">
+
+                    <div class="panel-body">
+                    <h3>修改</h3>
+                       <div class="form-group">
+                                <p>货物ID:${$("#goodsId" + id + wareId).html()}</p>
+                                <p>货物名称:${$("#name" + id + wareId).html()}</p>
+                                <p>货物规格:${$("#spec" + id + wareId).html()}</p>
+                             <div class="form-group">
+                                <label for="wareId1">转交到的仓库ID</label>
+                                <input type="text" class="form-control" id="wareIdTrans"}">
+                            </div>
+                             <div class="form-group">
+                                <label for="goodsNumber1">要调拨的货物数量</label>
+                                <input type="text" class="form-control" id="numberTrans" placeholder="${$('#number' + id + wareId).html()}">
+                            </div>
+                            <button class="btn btn-default" type="button" onclick="transOver(${id}, ${wareId})">提交</button>
+                        </form>
+                    </div>
+                </div>`;
+            $("#transArea").append(insertHTML);
+        }
+    </script>
+    <script>
+        function transOver(id, wareId) {
+            var goodsId = id;
+            var oldWareId = wareId;
+            var newWareId = $("#wareIdTrans").val();
+            var number = $("#numberTrans").val();
+            if(number.length===0){
+                number = $("#number" + id + wareId).html();
+            }
+            $.ajax({
+                type: "GET",
+                dataType: 'json',
+                url: '/warehouseController/warehouseTransfer',
+                data: {goodsId: goodsId, oldWarehouseId: oldWareId, newWarehouseId: newWareId, goodsNumber: number},
+                success: function (flag) {
+                    if(flag){
+                        alert('调拨成功！');
+
+                    } else {
+                        alert('调拨失败！');
+                    }
+                    location.reload();
+
+                },
+                error: function () {
+                    alert("调拨错误！");
+                }
+            })
+        }
     </script>
 </head>
 <body>
@@ -76,17 +133,17 @@
                         </li>
 
                         <li>
-                            <a href="newGoodsList.html" >
-                  <span class="nav-icon">
-                    <i class="material-icons">&#xe5c3;
-                      <span ui-include="'assets/images/i_1.svg'"></span>
-                    </i>
-                  </span>
+                            <a onclick="location.href='newGoodsList.html'">
+                                <span class="nav-icon">
+                                    <i class="material-icons">&#xe5c3;
+                                        <span ui-include="'assets/images/i_1.svg'"></span>
+                                    </i>
+                                </span>
                                 <span class="nav-text">货品列表</span>
                             </a>
                         </li>
                         <li>
-                            <a href="newAddGoods.html" >
+                            <a onclick="location.href='newAddGoods.html'"  >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
@@ -96,7 +153,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="newQueryGoods.html" >
+                            <a onclick='location.href="newQueryGoods.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
@@ -110,7 +167,7 @@
                             <small class="text-muted">客户资料维护</small>
                         </li>
                         <li>
-                            <a href="newCustomerList.html" >
+                            <a onclick='location.href="newCustomerList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -120,7 +177,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="newAddCustomer.html" >
+                            <a onclick='location.href="newAddCustomer.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -130,7 +187,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="newQueryCustomer.html" >
+                            <a onclick='location.href="newQueryCustomer.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -144,7 +201,7 @@
                             <small class="text-muted">销售业务管理</small>
                         </li>
                         <li>
-                            <a href="newCreateSellOrder.html" >
+                            <a onclick='location.href="newCreateSellOrder.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -154,7 +211,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="newUnexaminedList.html" >
+                            <a onclick='location.href="newUnexaminedList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -164,7 +221,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="newUnpaidList.html" >
+                            <a onclick='location.href="newUnpaidList.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -174,7 +231,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="newPaidList.html" >
+                            <a onclick='location.href="newPaidList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -188,7 +245,7 @@
                             <small class="text-muted">库存管理</small>
                         </li>
                         <li>
-                            <a href="newJinHuo.html" >
+                            <a onclick='location.href="newJinHuo.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -198,7 +255,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="index.html" >
+                            <a onclick='location.href="index.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -208,7 +265,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="newStockQuery.html" >
+                            <a onclick='location.href="newStockQuery.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -218,10 +275,10 @@
                             </a>
                         </li>
                         <li class="nav-header hidden-folded">
-                        <small class="text-muted">仓库管理</small>
-                    </li>
+                            <small class="text-muted">仓库管理</small>
+                        </li>
                         <li>
-                            <a href="newWarehouseManage.html" >
+                            <a onclick='location.href="newWarehouseManage.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe1b8;
                       <span ui-include="'assets/images/i_8.svg'"></span>
@@ -234,7 +291,7 @@
                             <small class="text-muted">收银台</small>
                         </li>
                         <li>
-                            <a href="checkoutCounter.html" >
+                            <a onclick='location.href="checkoutCounter.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe896;
                       <span ui-include="'assets/images/i_7.svg'"></span>
@@ -308,7 +365,7 @@
 
             <!-- ############ PAGE START-->
             <div class="row-col b-b">
-                <div class="col-md-8">
+                <div class="col-md-6">
                     <div class="padding">
                         <div class="margin">
                             <h5 class="m-b-0 _300">欢迎回来！</h5>
@@ -318,12 +375,18 @@
                         </div>
                         <div class="tab-pane active" id="tab-1">
                             <table class="table table-hover" id="goods">
-                                <tr><th>货物ID</th><th>货品名称</th><th>数量</th><th>规格</th></tr>
+                                <tr><th>货物ID</th><th>货品名称</th><th>数量</th><th>规格</th><td>仓库ID</td><td>操作</td></tr>
                             </table>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4"></div>
+                <div class="col-md-6">
+                    <div class="padding">
+                        <div class="margin" id="transArea">
+
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
