--- a/src/main/webapp/newGoodsList.html
+++ b/src/main/webapp/newGoodsList.html
@@ -209,17 +209,17 @@
               </li>
 
               <li>
-                <a onclick="window.location.href='newGoodsList.html'">
-                  <span class="nav-icon">
-                    <i class="material-icons">&#xe5c3;
-                      <span ui-include="'assets/images/i_1.svg'"></span>
-                    </i>
-                  </span>
+                <a onclick="location.href='newGoodsList.html'">
+                                <span class="nav-icon">
+                                    <i class="material-icons">&#xe5c3;
+                                        <span ui-include="'assets/images/i_1.svg'"></span>
+                                    </i>
+                                </span>
                   <span class="nav-text">货品列表</span>
                 </a>
               </li>
               <li>
-                <a onclick="window.location.href='newAddGoods.html'">
+                <a onclick="location.href='newAddGoods.html'"  >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
@@ -229,7 +229,7 @@
                 </a>
               </li>
               <li>
-                <a href="newQueryGoods.html" >
+                <a onclick='location.href="newQueryGoods.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
@@ -243,7 +243,7 @@
                 <small class="text-muted">客户资料维护</small>
               </li>
               <li>
-                <a href="newCustomerList.html" >
+                <a onclick='location.href="newCustomerList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -253,7 +253,7 @@
                 </a>
               </li>
               <li>
-                <a href="newAddCustomer.html" >
+                <a onclick='location.href="newAddCustomer.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -263,7 +263,7 @@
                 </a>
               </li>
               <li>
-                <a href="newQueryCustomer.html" >
+                <a onclick='location.href="newQueryCustomer.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -277,7 +277,7 @@
                 <small class="text-muted">销售业务管理</small>
               </li>
               <li>
-                <a href="newCreateSellOrder.html" >
+                <a onclick='location.href="newCreateSellOrder.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -287,7 +287,7 @@
                 </a>
               </li>
               <li>
-                <a href="newUnexaminedList.html" >
+                <a onclick='location.href="newUnexaminedList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -297,7 +297,7 @@
                 </a>
               </li>
               <li>
-                <a href="newUnpaidList.html" >
+                <a onclick='location.href="newUnpaidList.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -307,7 +307,7 @@
                 </a>
               </li>
               <li>
-                <a href="newPaidList.html" >
+                <a onclick='location.href="newPaidList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -321,7 +321,7 @@
                 <small class="text-muted">库存管理</small>
               </li>
               <li>
-                <a href="newJinHuo.html" >
+                <a onclick='location.href="newJinHuo.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -331,7 +331,7 @@
                 </a>
               </li>
               <li>
-                <a href="index.html" >
+                <a onclick='location.href="index.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -341,7 +341,7 @@
                 </a>
               </li>
               <li>
-                <a href="newStockQuery.html" >
+                <a onclick='location.href="newStockQuery.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -354,7 +354,7 @@
                 <small class="text-muted">仓库管理</small>
               </li>
               <li>
-                <a href="newWarehouseManage.html" >
+                <a onclick='location.href="newWarehouseManage.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe1b8;
                       <span ui-include="'assets/images/i_8.svg'"></span>
@@ -367,7 +367,7 @@
                 <small class="text-muted">收银台</small>
               </li>
               <li>
-                <a href="checkoutCounter.html" >
+                <a onclick='location.href="checkoutCounter.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe896;
                       <span ui-include="'assets/images/i_7.svg'"></span>
