--- a/src/main/webapp/newWarehouseManage.html
+++ b/src/main/webapp/newWarehouseManage.html
@@ -212,17 +212,17 @@
                           </li>
 
                           <li>
-                              <a href="newGoodsList.html" >
-                  <span class="nav-icon">
-                    <i class="material-icons">&#xe5c3;
-                      <span ui-include="'assets/images/i_1.svg'"></span>
-                    </i>
-                  </span>
+                              <a onclick="location.href='newGoodsList.html'">
+                                <span class="nav-icon">
+                                    <i class="material-icons">&#xe5c3;
+                                        <span ui-include="'assets/images/i_1.svg'"></span>
+                                    </i>
+                                </span>
                                   <span class="nav-text">货品列表</span>
                               </a>
                           </li>
                           <li>
-                              <a href="newAddGoods.html" >
+                              <a onclick="location.href='newAddGoods.html'"  >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
@@ -232,7 +232,7 @@
                               </a>
                           </li>
                           <li>
-                              <a href="newQueryGoods.html" >
+                              <a onclick='location.href="newQueryGoods.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
@@ -246,7 +246,7 @@
                               <small class="text-muted">客户资料维护</small>
                           </li>
                           <li>
-                              <a href="newCustomerList.html" >
+                              <a onclick='location.href="newCustomerList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -256,7 +256,7 @@
                               </a>
                           </li>
                           <li>
-                              <a href="newAddCustomer.html" >
+                              <a onclick='location.href="newAddCustomer.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -266,7 +266,7 @@
                               </a>
                           </li>
                           <li>
-                              <a href="newQueryCustomer.html" >
+                              <a onclick='location.href="newQueryCustomer.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
@@ -280,7 +280,7 @@
                               <small class="text-muted">销售业务管理</small>
                           </li>
                           <li>
-                              <a href="newCreateSellOrder.html" >
+                              <a onclick='location.href="newCreateSellOrder.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -290,7 +290,7 @@
                               </a>
                           </li>
                           <li>
-                              <a href="newUnexaminedList.html" >
+                              <a onclick='location.href="newUnexaminedList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -300,7 +300,7 @@
                               </a>
                           </li>
                           <li>
-                              <a href="newUnpaidList.html" >
+                              <a onclick='location.href="newUnpaidList.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -310,7 +310,7 @@
                               </a>
                           </li>
                           <li>
-                              <a href="newPaidList.html" >
+                              <a onclick='location.href="newPaidList.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
@@ -324,7 +324,7 @@
                               <small class="text-muted">库存管理</small>
                           </li>
                           <li>
-                              <a href="newJinHuo.html" >
+                              <a onclick='location.href="newJinHuo.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -334,7 +334,7 @@
                               </a>
                           </li>
                           <li>
-                              <a href="index.html" >
+                              <a onclick='location.href="index.html"'>
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -344,7 +344,7 @@
                               </a>
                           </li>
                           <li>
-                              <a href="newStockQuery.html" >
+                              <a onclick='location.href="newStockQuery.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
@@ -357,7 +357,7 @@
                               <small class="text-muted">仓库管理</small>
                           </li>
                           <li>
-                              <a href="newWarehouseManage.html" >
+                              <a onclick='location.href="newWarehouseManage.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe1b8;
                       <span ui-include="'assets/images/i_8.svg'"></span>
@@ -370,7 +370,7 @@
                               <small class="text-muted">收银台</small>
                           </li>
                           <li>
-                              <a href="checkoutCounter.html" >
+                              <a onclick='location.href="checkoutCounter.html"' >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe896;
                       <span ui-include="'assets/images/i_7.svg'"></span>
