--- a/src/main/webapp/newCreateSellOrder.html
+++ b/src/main/webapp/newCreateSellOrder.html
@@ -62,7 +62,7 @@
                     } else {
                         alert("添加失败，出现错误！");
                     }
-                    window.location.href="main.html"
+                    window.location.href="index.html"
                 },
                 error: function () {
                     alert("添加失败！");
