--- a/src/main/webapp/newQueryCustomer.html
+++ b/src/main/webapp/newQueryCustomer.html
@@ -46,8 +46,16 @@
                             var name = list[i].customerName;
                             var tel = list[i].customerTel;
                             var sellOrders = list[i].historySellOrderId;
-
-                            let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td>`;
+                            var status = list[i].status;
+                            var printStatus = '';
+                            if (status === 0) {
+                                printStatus = "批发";
+                            } else {
+                                printStatus = "零售";
+                            }
+                            console.log(list[i]);
+                            let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td>
+                                    <td id=${'status' + id}>${printStatus}</td>`;
                             if (sellOrders !== null){
                                 insert += `<td><table>`;
                                 for (var j = 0; j <sellOrders.length; j++){
@@ -74,12 +82,22 @@
                         <form>
                             <div class="form-group">
                                 <label for="goodsName1">客户名字</label>
-                                <input type="text" class="form-control" id="customerName2" placeholder="${$('name' + id).html()}">
+                                <input type="text" class="form-control" id="customerName2" placeholder="${$('#name' + id).html()}">
                             </div>
                             <div class="form-group">
                                 <label for="address">联系方式</label>
-                                <input type="text" class="form-control" id="address2" placeholder="${$('tel' + id).html()}">
+                                <input type="text" class="form-control" id="address2" placeholder="${$('#tel' + id).html()}">
                             </div>
+                            <p>
+          <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md" data-value="{primary:'primary', accent:'accent', warn:'warn'}">
+            <input type="radio" name="status" value="0">
+            <i class="primary"></i>批发
+          </label>
+          <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md" data-value="{primary:'accent', accent:'cyan', warn:'warn'}">
+            <input type="radio" name="status" value="1">
+            <i class="primary"></i>零售
+          </label>
+        </p>
                             <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
                         </form>
                     </div>
@@ -93,11 +111,12 @@
             var customerId = id;
             var name = $("#customerName2").val();
             var tel = $("#address2").val();
+            var status = $("input[name='status']:checked").val();
             $.ajax({
                 type:"GET",
                 url : "/customer/update",
                 dataType: "json",
-                data: {customerId: customerId, name: name, tel: tel},
+                data: {customerId: customerId, name: name, tel: tel, status: status},
                 success: function (list) {
                     alert("修改成功！");
                     location.reload();
@@ -385,7 +404,7 @@
                         </form>
                         <table class="table table-striped b-t b-b">
                             <thead>
-                            <tr><th>客户ID</th><th>客户名字</th><th>联系方式</th><th>销售单</th><th>操作</th></tr>
+                            <tr><th>客户ID</th><th>客户名字</th><th>联系方式</th><th>身份</th><th>销售单</th><th>操作</th></tr>
                             </thead>
                             <tbody id="customerTable">
                             </tbody>
