--- a/src/main/webapp/newCustomerList.html
+++ b/src/main/webapp/newCustomerList.html
@@ -61,7 +61,7 @@
                 name = $('#name' + id).html();
             }
             if (tel.length === 0) {
-                name = $('#tel' + id).html();
+                tel = $('#tel' + id).html();
             }
 
             $.ajax({
