--- a/src/main/webapp/newGoodsList.html
+++ b/src/main/webapp/newGoodsList.html
@@ -56,6 +56,14 @@
                                 <label for="spec1">货物规格</label>
                                 <input type="text" class="form-control" id="spec1" placeholder="${$('#spec' + id).html()}">
                             </div>
+                            <div class="form-group">
+                                <label for="spec1">零售价</label>
+                                <input type="text" class="form-control" id="retail">
+                            </div>
+                            <div class="form-group">
+                                <label for="spec1">批发价</label>
+                                <input type="text" class="form-control" id="wholesale">
+                            </div>
                             <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
                         </form>
                     </div>
@@ -88,53 +96,52 @@
       if (spec.length === 0) {
         spec = $('#spec' + id).html();
       }
-      $.ajax({
-        type:"GET",
-        url : "/goods/update",
-        dataType: "json",
-        data: {id: id, goodsName: name, spec: spec, warehouseId: wareId, goodsNumber:number},
-        success: function (list) {
-          alert("修改成功！");
-          location.reload();
-        },
-        error: function () {
-          alert("修改失败！");
-        }
-      })
+      var changeStatus = priceChange(id);
+      if (changeStatus === 0){
+        alert("修改失败！");
 
+      } else {
+        $.ajax({
+          type:"GET",
+          url : "/goods/update",
+          dataType: "json",
+          data: {id: id, goodsName: name, spec: spec, warehouseId: wareId, goodsNumber:number},
+          success: function (list) {
+            alert("修改成功！");
+            location.reload();
+          },
+          error: function () {
+            alert("修改失败！");
+          }
+        })
+      }
     }
   </script>
-  <!--    打开页面取得货物列表-->
-<!--  <script>-->
-<!--    $.ajax({-->
-<!--      type: "GET",-->
-<!--      url: "/goods/allGoods",-->
-<!--      dataType:"json",-->
-<!--      success: function (list) {-->
-<!--        if (list !== null) {-->
-<!--          for(var i = 0; i < list.length; i++){-->
-<!--            var id = list[i].goodsId;-->
-<!--            var name = list[i].goodsName;-->
-<!--            var spec = list[i].goodsSpecification;-->
-<!--            var wareId = list[i].warehouseId;-->
-<!--            var number = list[i].goodsNumber;-->
-<!--            let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>-->
-<!--<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;-->
-<!--            insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button>-->
-<!--<button type="button" class="btn btn-primary btn-xs" onclick="deleteGoods(${id})">删除货品</button></td></tr>`;-->
-<!--            $("#goods").append(insert);-->
-<!--          }-->
-<!--        }-->
-
-<!--      },-->
-<!--      error: function () {-->
-<!--        alert("获取失败！");-->
-<!--      }-->
-<!--    })-->
-
-<!--  </script>-->
   <script>
-    function get(){
+    function priceChange(id) {
+      var retail = $("#retail").val();
+      var wholesale = $("#wholesale").val();
+      if (retail.length === 0){
+        retail = 0;
+      }
+      if (wholesale.length === 0){
+        wholesale = 0
+      }
+      $.ajax({
+        type:"GET",
+        url : "/goods/modifyGoodsPrice",
+        dataType: "json",
+        data: {goodsId: id, wholesalePrice: wholesale, retailPrice: retail},
+        success: function (list) {
+          return 1;
+        },
+        error: function () {
+          return 0;
+        }
+      })
+    }
+    </script>
+  <script>
       $.ajax({
         type: "GET",
         url: "/goods/allGoods",
@@ -147,6 +154,9 @@
               var spec = list[i].goodsSpecification;
               var wareId = list[i].warehouseId;
               var number = list[i].goodsNumber;
+              var whole = list[i].wholesalePrice;
+              var retail = list[i].retailPrice;
+              console.log(list[i]);
               let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
 <td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
               insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button>
@@ -161,7 +171,7 @@
         }
       })
 
-    }
+
 
   </script>
   <!--    删除货物-->
@@ -184,7 +194,7 @@
   </script>
 
 </head>
-<body onload="get()">
+<body>
   <div class="app" id="app">
 
 <!-- ############ LAYOUT START-->
